--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "18.2.0",
     "react-loading-skeleton": "^3.3.1",
     "swiper": "^10.1.0",
-    "tailwindcss": "3.3.3"
+    "tailwindcss": "3.3.3",
+    "use-local-storage-state": "^18.3.3"
   }
 }
