--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@stripe/stripe-js": "^2.1.0",
     "autoprefixer": "10.4.14",
     "classnames": "^2.3.2",
     "eslint": "8.46.0",
@@ -16,7 +17,7 @@
     "framer-motion": "^10.15.1",
     "mongodb": "^5.7.0",
     "mongoose": "^7.4.1",
-    "next": "13.4.12",
+    "next": "^13.4.12",
     "postcss": "8.4.27",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
@@ -24,6 +25,7 @@
     "react-hook-form": "^7.45.4",
     "react-hot-toast": "^2.4.1",
     "react-loading-skeleton": "^3.3.1",
+    "stripe": "^13.2.0",
     "swiper": "^10.1.0",
     "tailwindcss": "3.3.3",
     "use-local-storage-state": "^18.3.3"
