--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
     "framer-motion": "^10.15.1",
+    "micro-cors": "^0.1.1",
     "mongodb": "^5.7.0",
     "mongoose": "^7.4.1",
     "next": "^13.4.12",
